# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

** Added

- Add preliminary support for processing files with latexmk.  Support
  for =dvipdfmx= and the choice for viewer after compilation are not
  optimal, yet.  Overall, the support comes close to what the
  =auctex-latexmk= library provides.
- Add new command ~TeX-fold-section~ (bound to =C-c C-o C-s=) which
  hides all configured macros in the section containing point when
  ~TeX-fold-mode~ is active.  The unfold counterpart
  ~TeX-fold-clearout-section~ is bound to =C-c C-o s=.
- Add new custom option ~TeX-fold-auto-reveal~ which contols how the
  original source text is revealed when user clicks the folded portion
  by mouse.
- Add new custom option ~preview-protect-point~ which determines whether
  previews generated on top of the current point should be temporarily
  opened (~nil~ by default).
- Add new custom option ~TeX-fold-region-functions~ which is a list of
  additional functions to call when folding a region.
- Support query and insert of ~mcite~ compatibility macro
  (=style/biblatex.el=).
- Support the =\verbatiminput*= macro (=style/verbatim.el=).

** Fixed

- Adjust options when processing files with ConTeXt: Remove obsolete
  =--texutil=, use =--synctex=repeat= and omit =--nonstop= when
  ~TeX-source-correlate-mode~ is enabled.

* [14.0.4] - 2024-03-31

** Added

- Support completion for many commands described in =clsguide.tex=,
  =fntguide.tex= and =usrguide.tex=.
- Provide new custom option ~LaTeX-flymake-chktex-options~ to enable or
  disable specific warnings of =chktex= backend used by Flymake.
- Provide new custom option ~TeX-kill-process-without-query~ which
  controls if user is asked before aborting a running process for a TeX
  document.

** Fixed

- Improve guessing names for headers used in Imenu.

** Removed

- Revert usage of ~:local~ tag inside ~defcustom~.  This tag isn't
  handled correctly in Emacs 27.1 and breaks AUCTeX.