@@ -21,11 +21,13 @@
 - Add new custom option ~TeX-fold-auto-reveal~ which contols how the
   original source text is revealed when user clicks the folded portion
   by mouse.
+- Add new custom option ~TeX-fold-region-functions~ which is a list of
+  additional functions to call when folding a region.
 - Add new custom option ~preview-protect-point~ which determines whether
   previews generated on top of the current point should be temporarily
   opened (~nil~ by default).
-- Add new custom option ~TeX-fold-region-functions~ which is a list of
-  additional functions to call when folding a region.
+- Add new custom option ~preview-leave-open-previews-visible~ which
+  determines if the preview code stays visible once opened.
 - Support query and insert of ~mcite~ compatibility macro
   (=style/biblatex.el=).
 - Support the =\verbatiminput*= macro (=style/verbatim.el=).
